Изменения в проекте для задания Спринта №6: 1. Реализована неограниченная история просмотров без дублей 2. Добавлена реализация копий задач 3. Добавлена очистка истории при удалении задач 4. Исправлен расчёт статусов Эпиков 5. Дополнены тесты по истории, статусам, целостности эпиков, безлимитности и копиям.