@@ -145,6 +145,188 @@ public class TaskManagerTest {
 
         List<Task> history = taskManager.getHistory();
 
-        assertNotEquals("Changed", history.get(0).getName(), "История должна хранить старую версию задачи.");
+        assertNotEquals("Changed", history.getFirst().getName(), "История должна хранить старую версию задачи.");
+    }
+    @Test
+    void historyHasNoDuplicatesAndMovesToTail() {
+        // История должна быть без дублей; повторный просмотр переносит задачу в хвост
+        Task a = new Task("A", "d"); taskManager.addTask(a);
+        Task b = new Task("B", "d"); taskManager.addTask(b);
+        Task c = new Task("C", "d"); taskManager.addTask(c);
+
+        taskManager.getTaskById(a.getId()); // A
+        taskManager.getTaskById(b.getId()); // A,B
+        taskManager.getTaskById(c.getId()); // A,B,C
+
+        taskManager.getTaskById(b.getId()); // A,C,B
+
+        List<Task> h = taskManager.getHistory();
+        assertEquals(3, h.size(), "История не должна содержать дубликаты.");
+        assertEquals(a.getId(), h.get(0).getId(), "Должен сохраняться порядок просмотров.");
+        assertEquals(c.getId(), h.get(1).getId());
+        assertEquals(b.getId(), h.get(2).getId(), "Повторно просмотренная задача должна быть в конце.");
+    }
+
+    @Test
+    void historyRemovesOnDelete_head_middle_tail() {
+        // Удаление задач из менеджера должно удалять их из истории (голова/середина/хвост)
+        Task t1 = new Task("T1","d"); taskManager.addTask(t1);
+        Task t2 = new Task("T2","d"); taskManager.addTask(t2);
+        Task t3 = new Task("T3","d"); taskManager.addTask(t3);
+
+        taskManager.getTaskById(t1.getId()); // head
+        taskManager.getTaskById(t2.getId()); // middle
+        taskManager.getTaskById(t3.getId()); // tail
+
+        taskManager.deleteTask(t2.getId()); // remove middle
+        List<Task> h = taskManager.getHistory();
+        assertEquals(2, h.size());
+        assertEquals(t1.getId(), h.get(0).getId());
+        assertEquals(t3.getId(), h.get(1).getId());
+
+        taskManager.deleteTask(t1.getId()); // remove head
+        h = taskManager.getHistory();
+        assertEquals(1, h.size());
+        assertEquals(t3.getId(), h.getFirst().getId());
+
+        taskManager.deleteTask(t3.getId()); // remove tail
+        h = taskManager.getHistory();
+        assertTrue(h.isEmpty(), "История должна очищаться при удалении задач.");
+    }
+
+    @Test
+    void historyIsUnlimited() {
+        // История должна быть неограниченной по размеру
+        int N = 25;
+        for (int i = 0; i < N; i++) {
+            Task t = new Task("T"+i, "d");
+            taskManager.addTask(t);
+            taskManager.getTaskById(t.getId());
+        }
+        assertEquals(N, taskManager.getHistory().size(), "История должна быть неограниченной.");
+    }
+
+    @Test
+    void deletingEpicRemovesItsSubtasksFromManagerAndHistory() {
+        // Удаление эпика должно удалять его и его подзадачи из менеджера и из истории
+        Epic e = new Epic("E","d"); taskManager.addEpic(e);
+        Subtask s1 = new Subtask("S1","d", e.getId()); taskManager.addSubtask(s1);
+        Subtask s2 = new Subtask("S2","d", e.getId()); taskManager.addSubtask(s2);
+
+        taskManager.getEpicById(e.getId());
+        taskManager.getSubtaskById(s1.getId());
+        taskManager.getSubtaskById(s2.getId());
+
+        taskManager.deleteEpic(e.getId());
+
+        assertTrue(taskManager.getHistory().isEmpty(), "История должна очиститься от эпика и его подзадач.");
+        assertNull(taskManager.getSubtaskById(s1.getId()), "Подзадача должна быть удалена вместе с эпиком.");
+        assertNull(taskManager.getSubtaskById(s2.getId()), "Подзадача должна быть удалена вместе с эпиком.");
+    }
+
+    @Test
+    void deletingSubtaskRemovesIdFromEpicAndUpdatesStatus() {
+        // При удалении подзадачи её id не должен оставаться внутри эпика; статус эпика пересчитывается
+        Epic e = new Epic("E","d"); taskManager.addEpic(e);
+        Subtask s1 = new Subtask("S1","d", e.getId()); taskManager.addSubtask(s1);
+        Subtask s2 = new Subtask("S2","d", e.getId()); taskManager.addSubtask(s2);
+
+        // Смешанные статусы -> IN_PROGRESS
+        s1.setStatus(TaskStatus.DONE);
+        taskManager.updateSubtask(s1);
+        assertEquals(TaskStatus.IN_PROGRESS, taskManager.getEpicById(e.getId()).getStatus());
+
+        // Удаляем DONE-подзадачу -> остаётся NEW -> статус NEW
+        taskManager.deleteSubtask(s1.getId());
+        Epic after = taskManager.getEpicById(e.getId());
+        assertFalse(after.getSubtaskIds().contains(s1.getId()), "В эпике не должно оставаться неактуальных id подзадач.");
+        assertEquals(TaskStatus.NEW, after.getStatus(), "Статус эпика должен перерассчитаться после удаления подзадачи.");
+    }
+
+    @Test
+    void epicStatusCalculation_AllCases() {
+        // Проверка всех веток расчёта статуса эпика
+        Epic e = new Epic("E","d"); taskManager.addEpic(e);
+        Subtask a = new Subtask("A","d", e.getId()); taskManager.addSubtask(a);
+        Subtask b = new Subtask("B","d", e.getId()); taskManager.addSubtask(b);
+
+        // оба NEW -> NEW
+        assertEquals(TaskStatus.NEW, taskManager.getEpicById(e.getId()).getStatus());
+
+        // один IN_PROGRESS -> IN_PROGRESS
+        a.setStatus(TaskStatus.IN_PROGRESS);
+        taskManager.updateSubtask(a);
+        assertEquals(TaskStatus.IN_PROGRESS, taskManager.getEpicById(e.getId()).getStatus());
+
+        // DONE + NEW -> IN_PROGRESS (смешанные)
+        a.setStatus(TaskStatus.DONE);
+        taskManager.updateSubtask(a);
+        assertEquals(TaskStatus.IN_PROGRESS, taskManager.getEpicById(e.getId()).getStatus());
+
+        // оба DONE -> DONE
+        b.setStatus(TaskStatus.DONE);
+        taskManager.updateSubtask(b);
+        assertEquals(TaskStatus.DONE, taskManager.getEpicById(e.getId()).getStatus());
+    }
+
+    @Test
+    void defensiveCopiesFromManagerAndHistory() {
+        // Менеджер и история должны возвращать копии; внешние изменения не влияют на хранимые данные
+        Task t = new Task("X","orig"); taskManager.addTask(t);
+
+        // копия из getTaskById
+        Task got = taskManager.getTaskById(t.getId());
+        got.setName("mutated");
+        assertNotEquals("mutated", taskManager.getTaskById(t.getId()).getName());
+
+        // копии из getAllTasks
+        List<Task> all = taskManager.getAllTasks();
+        all.getFirst().setDescription("mut");
+        assertNotEquals("mut", taskManager.getTaskById(t.getId()).getDescription());
+
+        // история хранит снимок
+        taskManager.getTaskById(t.getId());
+        t.setName("changed-after");
+        assertNotEquals("changed-after", taskManager.getHistory().getFirst().getName());
+    }
+
+    @Test
+    void epicCopyMutationDoesNotAffectStoredEpic() {
+        // Мутация списка подзадач у копии эпика не должна менять данные внутри менеджера
+        Epic e = new Epic("E","d"); taskManager.addEpic(e);
+        Subtask s = new Subtask("S","d", e.getId()); taskManager.addSubtask(s);
+
+        Epic copy = taskManager.getEpicById(e.getId());
+        copy.getSubtaskIds().clear(); // меняем копию
+        Epic fresh = taskManager.getEpicById(e.getId());
+        assertTrue(fresh.getSubtaskIds().contains(s.getId()),
+                "Изменения у копии не должны влиять на хранящийся эпик.");
+    }
+
+    @Test
+    void shouldRejectDuplicateIdsOnAdd() {
+        // Попытки добавить сущности с занятым id должны приводить к исключению
+        Task t1 = new Task("T1","d"); taskManager.addTask(t1);
+        Task t2 = new Task("T2","d"); t2.setId(t1.getId());
+        assertThrows(IllegalArgumentException.class, () -> taskManager.addTask(t2),
+                "Добавление задачи с занятым id должно бросать исключение.");
+
+        Epic e1 = new Epic("E1","d"); taskManager.addEpic(e1);
+        Epic e2 = new Epic("E2","d"); e2.setId(e1.getId());
+        assertThrows(IllegalArgumentException.class, () -> taskManager.addEpic(e2),
+                "Добавление эпика с занятым id должно бросать исключение.");
+
+        Subtask s1 = new Subtask("S1","d", e1.getId()); taskManager.addSubtask(s1);
+        Subtask s2 = new Subtask("S2","d", e1.getId()); s2.setId(s1.getId());
+        assertThrows(IllegalArgumentException.class, () -> taskManager.addSubtask(s2),
+                "Добавление подзадачи с занятым id должно бросать исключение.");
+    }
+
+    @Test
+    void addingSubtaskForMissingEpicShouldFail() {
+        // Добавление подзадачи к несуществующему эпику должно бросать исключение
+        Subtask s = new Subtask("S","d", 9999);
+        assertThrows(IllegalArgumentException.class, () -> taskManager.addSubtask(s),
+                "Эпик не найден: должна быть ошибка при добавлении подзадачи.");
     }
 }
